--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,21 +6,21 @@
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_register"
+        android:id="@+id/toolbar_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
-        app:title="Register"
+        app:title="Log In"
         app:titleTextColor="#000000" />
 
     <ImageView
         android:id="@+id/img_ilustrasi"
-        android:layout_width="334dp"
-        android:layout_height="199dp"
-        android:layout_below="@+id/toolbar_register"
+        android:layout_width="272dp"
+        android:layout_height="240dp"
+        android:layout_below="@+id/toolbar_login"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp"
-        android:src="@drawable/undraw_chef"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/undraw_online_groceries"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -29,7 +29,7 @@
         android:layout_width="36dp"
         android:layout_height="30dp"
         android:layout_below="@+id/img_ilustrasi"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:layout_marginStart="20dp"
         android:src="@drawable/user"
         app:layout_constraintStart_toStartOf="@id/img_uname" />
@@ -39,8 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_ilustrasi"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="50dp"
         android:drawablePadding="10dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -57,6 +57,7 @@
         android:layout_marginStart="20dp"
         android:src="@drawable/password"
         app:layout_constraintStart_toStartOf="@id/img_pass" />
+
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
@@ -69,43 +70,35 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:layout_toEndOf="@id/img_pass"/>
+
     <Button
-        android:id="@+id/register_button"
+        android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_below="@+id/password"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:text="Sign Up"
+        android:text="Log In"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textAllCaps="false"
         android:background="#F1C40F"
         android:enabled="false"/>
 
-    <TextView
-        android:id="@+id/textlogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/login_button"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="34dp"
-        android:text="You Already Have an Account."
-        android:textSize="16sp" />
-
     <Button
         android:id="@+id/googlesigninbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_button"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="20dp"
-        android:layout_toEndOf="@id/textlogin"
         android:background="@drawable/roundedbutton"
-        android:padding="5dp"
-        android:text="Login"
+        android:drawableStart="@drawable/common_google_signin_btn_icon_light"
+        android:padding="10dp"
+        android:textSize="16sp"
+        android:text="Sign Up with Google"
         android:textAllCaps="false"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textSize="16sp" />
+        android:textColor="@android:color/darker_gray"
+        android:layout_below="@+id/login_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"/>
+
 </RelativeLayout>
