--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -18,7 +18,7 @@
         android:layout_below="@+id/toolbar_register"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
-        android:src="@drawable/undraw_Chef"
+        android:src="@drawable/undraw_chef"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -68,7 +68,7 @@
         android:inputType="textPassword"
         android:layout_toEndOf="@id/img_pass"/>
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_below="@+id/password"
