--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -56,7 +56,7 @@
         android:src="@drawable/password"
         app:layout_constraintStart_toStartOf="@id/img_pass" />
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/epassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/username"
@@ -71,7 +71,7 @@
         android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@+id/password"
+        android:layout_below="@+id/epassword"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
