--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_register"
         android:layout_width="match_parent"
@@ -11,6 +12,7 @@
         android:background="#FFFFFF"
         app:title="Register"
         app:titleTextColor="#000000" />
+
     <ImageView
         android:id="@+id/img_ilustrasi"
         android:layout_width="334dp"
@@ -71,22 +73,22 @@
         android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@+id/password"
+        android:layout_below="@+id/epassword"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:text="register"
+        android:text="Sign Up"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textAllCaps="false"
         android:background="#F1C40F"
-        android:enabled="false"/>
+        android:enabled="true"/>
 
     <TextView
         android:id="@+id/textlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_button"
+        android:layout_below="@+id/register_button"
         android:layout_marginStart="20dp"
         android:layout_marginTop="34dp"
         android:text="You Already Have an Account."
@@ -96,7 +98,8 @@
         android:id="@+id/googlesigninbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_button"
+        android:layout_below="@+id/register_button"
+        android:layout_marginStart="19dp"
         android:layout_marginTop="20dp"
         android:layout_toEndOf="@id/textlogin"
         android:background="@drawable/roundedbutton"
