--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
         android:id="@+id/img_pass"
         android:layout_width="36dp"
         android:layout_height="30dp"
-        android:layout_below="@+id/username"
+        android:layout_below="@+id/eusername"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:src="@drawable/password"
@@ -63,7 +63,7 @@
         android:id="@+id/epassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/username"
+        android:layout_below="@+id/eusername"
         android:layout_marginTop="11dp"
         android:layout_marginRight="20dp"
         android:drawablePadding="10dp"
@@ -76,7 +76,7 @@
         android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@+id/password"
+        android:layout_below="@+id/epassword"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
