--- a/app/src/main/res/layout/fragment_cemilan.xml
+++ b/app/src/main/res/layout/fragment_cemilan.xml
@@ -71,7 +71,7 @@
                     android:contentDescription="edit"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@mipmap/add"/>
+                    app:srcCompat="@drawable/add"/>
 
             </RelativeLayout>
 
