--- a/app/src/main/res/layout/beranda_kasir.xml
+++ b/app/src/main/res/layout/beranda_kasir.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/frame_layout"
@@ -20,4 +18,4 @@
             android:text="@string/beranda"
             android:textSize="30sp"/>
     </FrameLayout>
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
