--- a/app/src/main/res/layout/fragment_beranda_kasir.xml
+++ b/app/src/main/res/layout/fragment_beranda_kasir.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".kasirfragment.BerandaKasirFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/beranda"
-        android:textSize="30sp"/>
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/beranda"
+            android:textSize="30sp"/>
 </RelativeLayout>
