--- a/app/src/main/res/layout/halaman_reservasi_pelanggan.xml
+++ b/app/src/main/res/layout/halaman_reservasi_pelanggan.xml
@@ -9,13 +9,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="408dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="@string/judul"
+        android:textAlignment="center"
         android:textSize="28sp"
         android:textStyle="bold"
-        app:layout_constraintVertical_bias="0.04"
+        android:background="@android:color/tertiary_text_light"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +52,7 @@
 
     <EditText
         android:id="@+id/edtTgl"
-        android:layout_width="0dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
@@ -62,7 +63,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNoHp"/>
+        app:layout_constraintTop_toBottomOf="@+id/edtNoHp" />
+
+    <Button
+        android:id="@+id/btnedttgl"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="Change Date"
+        android:background="@color/kuningprimary"
+        android:layout_marginTop="14dp"
+        app:layout_constraintStart_toEndOf="@id/edtTgl"
+        app:layout_constraintTop_toBottomOf="@id/edtNoHp"/>
 
     <EditText
         android:id="@+id/edtMeja"
@@ -85,6 +97,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/reservasibtn"
+        android:background="@android:color/holo_green_dark"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtMeja"/>
