--- a/app/src/main/res/layout/update_reservasi_pelanggan.xml
+++ b/app/src/main/res/layout/update_reservasi_pelanggan.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="update_reservasi_pelanggan">
 
     <EditText
         android:id="@+id/upNama"
@@ -36,7 +37,7 @@
 
     <EditText
         android:id="@+id/uptglreservasi"
-        android:layout_width="0dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
@@ -48,6 +49,17 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/upNoHp"/>
+
+    <Button
+        android:id="@+id/btnuptgl"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="Change Date"
+        android:background="@color/kuningprimary"
+        android:layout_marginTop="14dp"
+        app:layout_constraintStart_toEndOf="@id/uptglreservasi"
+        app:layout_constraintTop_toBottomOf="@id/upNoHp"/>
 
     <EditText
         android:id="@+id/upMeja"
