--- a/app/src/main/res/layout/activity_home_admin.xml
+++ b/app/src/main/res/layout/activity_home_admin.xml
@@ -79,6 +79,7 @@
                 android:padding="10dp"
                 android:layout_height="match_parent">
                 <ImageView
+                    android:id="@+id/btnMenu"
                     android:layout_width="80dp"
                     android:src="@drawable/food"
                     android:layout_height="80dp"/>
