--- a/app/src/main/res/layout/admin_tambahmenu.xml
+++ b/app/src/main/res/layout/admin_tambahmenu.xml
@@ -69,7 +69,7 @@
         android:drawablePadding="10dp"
         android:paddingBottom="20dp"
         android:hint="Harga"
-        android:inputType="number"
+        android:inputType="text"
         android:layout_toEndOf="@id/img_harga"/>
 
     <ImageView
