--- a/app/src/main/res/layout/halaman_reservasi_pelanggan.xml
+++ b/app/src/main/res/layout/halaman_reservasi_pelanggan.xml
@@ -50,16 +50,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtNama"/>
 
-    <EditText
+    <TextView
         android:id="@+id/edtTgl"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
+        android:layout_width="245dp"
+        android:layout_height="46dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:textSize="18sp"
         android:hint="@string/tanggal_reservasi"
-        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="@string/jumlah_meja"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
