--- a/app/src/main/res/layout/listview_pemesananmenu_pelanggan.xml
+++ b/app/src/main/res/layout/listview_pemesananmenu_pelanggan.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
+        android:inputType="number"
         android:textColor="@color/hijausecondary"
         android:text="@string/txtharga"/>
 
@@ -32,6 +33,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
+        android:inputType="number"
         android:textColor="@color/hijausecondary"
         android:text="@string/txtjumlah"/>
 
@@ -42,6 +44,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
+        android:inputType="number"
         android:textColor="@color/hijausecondary"
         android:text="@string/txttotal"/>
 </LinearLayout>
