--- a/app/src/main/res/layout/listview_reservasi_pelanggan.xml
+++ b/app/src/main/res/layout/listview_reservasi_pelanggan.xml
@@ -34,6 +34,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
         android:text="@string/tanggal_reservasi"
+        android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ou_hp"/>
@@ -45,6 +46,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
         android:text="@string/jumlah_meja"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ou_tgl"/>
