--- a/app/src/main/res/layout/update_reservasi_pelanggan.xml
+++ b/app/src/main/res/layout/update_reservasi_pelanggan.xml
@@ -70,7 +70,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="@string/jumlah_meja"
-        android:inputType="textPersonName"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
