--- a/app/src/main/res/layout/admin_tambahmenu.xml
+++ b/app/src/main/res/layout/admin_tambahmenu.xml
@@ -82,18 +82,18 @@
         android:src="@drawable/category"
         app:layout_constraintStart_toStartOf="@id/img_kategori" />
 
-    <Spinner
+    <EditText
         android:id="@+id/kategori"
-        android:layout_width="335dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/img_harga"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/img_kategori"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="-35dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
         android:layout_toEndOf="@id/img_kategori"
         android:drawablePadding="10dp"
+        android:hint="kategori"
+        android:inputType="text"
         android:paddingBottom="20dp" />
 
     <ImageView
@@ -141,5 +141,5 @@
         android:textSize="20sp"
         android:textAllCaps="false"
         android:background="@color/hijausecondary"
-        android:enabled="false"/>
+        android:enabled="true"/>
 </RelativeLayout>
