--- a/app/src/main/res/layout/fragment_minuman.xml
+++ b/app/src/main/res/layout/fragment_minuman.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/gambar_minum"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:src="@drawable/drink2"
@@ -42,7 +42,7 @@
                     android:id="@+id/nama_minum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="30dp"
                     android:layout_toEndOf="@+id/gambar_minum"
                     android:text="@string/contoh_minum"
@@ -55,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/nama_minum"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="5dp"
                     android:layout_toEndOf="@+id/gambar_minum"
                     android:text="@string/harga"
@@ -66,12 +66,23 @@
                     android:id="@+id/icn_edit"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginStart="320dp"
+                    android:layout_marginStart="280dp"
                     android:layout_marginTop="40dp"
                     android:contentDescription="edit"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/add"/>
+
+                <ImageView
+                    android:id="@+id/icn_delete"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="320dp"
+                    android:layout_marginTop="40dp"
+                    android:contentDescription="delete"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:srcCompat="@drawable/delete"
+                    app:tint="@android:color/holo_red_dark" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
