--- a/app/src/main/res/layout/fragment_makanan.xml
+++ b/app/src/main/res/layout/fragment_makanan.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menufragment.MakananFragment">
+    android:orientation="vertical">
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/namaMenu"
+        android:textSize="24sp"
+        android:layout_margin="40dp"/>
 
     <TextView
+        android:text="TextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Cemilan"
-        android:gravity="center"
-        android:background="@android:color/white"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="#000"
-        />
+        android:layout_height="wrap_content"
+        android:id="@+id/hargaMenu"
+        android:textSize="24sp"
+        android:layout_margin="40dp"/>
 
-</FrameLayout>
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/kategoriMenu"
+        android:textSize="24sp"
+        android:layout_margin="40dp"/>
+</LinearLayout>
