--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -10,6 +10,7 @@
         android:src="@drawable/background_home"
         android:layout_marginTop="20dp"/>
     <TextView
+        android:id="@+id/namaProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Anonimus"
