--- a/app/src/main/res/layout/halaman_menu.xml
+++ b/app/src/main/res/layout/halaman_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,25 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_awal"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="@drawable/foodbanner1"
-            app:popupTheme="@style/AppTheme">
-
-            <TextView
-                android:id="@+id/pengguna"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="135dp"
-                android:text="MENU"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="50sp"
-                android:textStyle="bold" />
-        </androidx.appcompat.widget.Toolbar>
-
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
@@ -39,11 +20,41 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
-        layout="@layout/fragment_cemilan"
-        android:layout_marginBottom="@android:"/>
-    <include layout="@layout/fragment_cemilan"/>
-    <include layout="@layout/fragment_cemilan"/>
-    <include layout="@layout/fragment_cemilan"/>
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/toolbar_awal"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="298dp">
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        </LinearLayout>
+    </ScrollView>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_awal"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/foodbanner1"
+        app:popupTheme="@style/AppTheme">
+
+        <TextView
+            android:id="@+id/pengguna"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="135dp"
+            android:text="MENU"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="50sp"
+            android:textStyle="bold" />
+    </androidx.appcompat.widget.Toolbar>
+
+    <include layout="@layout/fragment_makanan"/>
+
+
+</RelativeLayout>
