--- a/app/src/main/res/layout/halaman_reservasi_pelanggan.xml
+++ b/app/src/main/res/layout/halaman_reservasi_pelanggan.xml
@@ -12,7 +12,7 @@
         android:layout_width="408dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="@string/judul"
+        android:hint="Reservasi "
         android:textAlignment="center"
         android:textSize="28sp"
         android:textStyle="bold"
@@ -29,7 +29,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="@string/namapemesan"
+        android:hint="Masukkan Nama Pemesan"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="@string/hp"
+        android:hint="Masukkan No Hp"
         android:inputType="textPhonetic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,7 +59,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:textSize="18sp"
-        android:hint="@string/tanggal_reservasi"
+        android:hint="Masukkan Tanggal Pemesanan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="@string/jumlah_meja"
+        android:hint="Masukkan Jumlah Meja"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -96,7 +96,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/reservasibtn"
+        android:text="Kirim "
         android:background="@android:color/holo_green_dark"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
